# YakuZen

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
src/: app.py  check_gpu.py  process_audio.py  translate_subs.py
